--- a/index.html
+++ b/index.html
@@ -300,7 +300,8 @@
             
             <fieldset v-for="product in products" class=" col-ms-12 col-md-5 col-lg-3 " >
              <article class="f1 ">
-              <a href="#"><img id="photo1" :src="`${product.image} `" alt="bijoux" height=""> <img id="photo2" :src="`${product.image2} `" alt="bijoux" height=""> </a>
+              <a href="#"><img id="photo1" :src="`${product.image} `" alt="bijoux" height="">  </a>
+              <!-- <img id="photo2" :src="`${product.image2} `" alt="bijoux" height=""> -->
               
              </article >
                 <button v-if="product.quantity>0"     @click=" product.quantity -=1 ; product.count++ ; ajout++ "     class=" ajouter" href="#"   ><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-bag-plus-fill" viewBox="0 0 16 16">
